<resources>
    <string name="app_name">Pet Nanny</string>
    <string name="words_logo">Pet Nanny</string>
    <string name="project_name">Pet Nanny</string>
    <string name="pet_nanny_logo">Pet Nanny Logo</string>

    <!--Login Page-->
    <string name="please_login">Please Login:</string>
    <string name="loginBtn">Login</string>
    <string name="create_account">Click here to create an account!</string>

    <!--Registration Page-->
    <string name="please_register">Please Register:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">DOB (mm-dd-yyyy)</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>

    <!--Home Page-->
    <string name="logout">Logout</string>
    <string name="pet_name">Pet Name</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="special_care_needs">Special Care Needs</string>

    <string name="my_profile">My Profile</string>
    <string name="pet_profiles">Pet Profiles</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="add_pet">Add Pet</string>
    <string name="sex">Sex</string>
    <string name="requests">Requests</string>
    <string name="request">Request</string>
    <string name="asking_daily_price">Asking Daily Price</string>
    <string name="update">Update</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="review_sitter">Review Sitter</string>
    <string name="feedback">Feedback</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="take_care_of">You have a request to take care of</string>
    <string name="bio">Bio</string>
    <string name="tell_us_about_your_experience">Tell us about your experience.</string>
    <string name="submit">Submit</string>
    <string name="total_pay">Total Pay</string>
    <string name="asking_price">Asking price</string>
    <string name="request_for">request for</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>

</resources>