<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_editProfile"
            android:icon="@drawable/ic_person"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_editPetProfile"
            android:icon="@drawable/ic_paw"
            android:title="@string/pet_profiles" />

        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/requests" />

        <item
            android:id="@+id/nav_feedback"
            android:title="@string/feedback" />
    </group>

    <item
        android:id="@+id/nav_logout"
        android:title="@string/logout"
        android:gravity="bottom"/>
</menu>