<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:useDefaultMargins="true"
    android:columnCount="1"
    android:layout_marginHorizontal="40dp"
    android:layout_marginTop="100dp"
    tools:context=".RegistrationActivity">

    <TextView
        android:textSize="26sp"
        android:layout_columnSpan="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/please_register" />
    <EditText
        android:id="@+id/firstName"
        android:layout_gravity="fill_horizontal"
        android:hint="@string/first_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/lastName"
        android:layout_gravity="fill_horizontal"
        android:hint="@string/last_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/email"
        android:layout_gravity="fill_horizontal"
        android:inputType="textEmailAddress"
        android:hint="@string/e_mail"/>

    <EditText
        android:id="@+id/password"
        android:layout_gravity="fill_horizontal"
        android:inputType="textPassword"
        android:hint="@string/password"/>
    <Button
        android:id="@+id/btnRegister"
        android:layout_gravity="center_horizontal"
        android:text="@string/register" />
</GridLayout>