<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="15dp"
    android:layout_marginTop="25dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ExpandRequestActivity">

    <TextView
        android:id="@+id/petName"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_care_of" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/startDate"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="08/23/78 - " />

        <TextView
            android:id="@+id/endDate"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="08/27/78" />

    </LinearLayout>

    <TextView
        android:id="@+id/totalPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$total pay"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        style="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
        android:id="@+id/sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:layout_marginTop="5dp"
        style="@style/TextAppearance.AppCompat.Medium"/>


    <TextView
        android:id="@+id/petInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:text="This is a sample text of the pet's info"
        style="@style/TextAppearance.AppCompat.Medium"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept" />

        <Button
            android:id="@+id/deny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deny" />
    </LinearLayout>


</LinearLayout>