<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPetProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/petProfilePicture"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:src="@drawable/pet_profile_picture"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/textViewPetName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toRightOf="@id/petProfilePicture"
                android:layout_weight="1"
                android:text="@string/pet_name"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toRightOf="@id/petProfilePicture"
                android:layout_below="@id/textViewPetName"
                android:layout_weight="1"
                android:text="@string/sex"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toRightOf="@id/petProfilePicture"
                android:layout_below="@id/textViewSex"
                android:layout_weight="1"
                android:text="@string/type"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toRightOf="@id/petProfilePicture"
                android:layout_below="@id/textViewType"
                android:layout_weight="1"
                android:text="@string/age"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toRightOf="@id/petProfilePicture"
                android:layout_below="@id/textViewAge"
                android:layout_weight="1"
                android:text="@string/weight"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewSpecialCareNeeds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toRightOf="@id/petProfilePicture"
                android:layout_below="@id/textViewWeight"
                android:layout_weight="1"
                android:text="@string/special_care_needs"
                android:textSize="24sp" />


    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:fabSize="normal"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="6dp"
        android:src="@drawable/ic_baseline_add_24" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>

